fixed container overflow

--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,7 @@ p {
 /* CAROUSEL */
 
 .carousel {
+	overflow: hidden;
 	width: 100%;
 }
 
